force-app/main/default/objects/Account/fields/Amount_In_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_USD__c</fullName>
    <label>Amount In USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>