force-app/main/default/objects/Account/fields/Avg_Case_Resolution_Days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Case_Resolution_Days__c</fullName>
    <label>Avg Case Resolution Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>