force-app/main/default/objects/Account/fields/total_adjustment_amount__c.field-meta.xml
<CustomField>
    <fullName>total_adjustment_amount__c</fullName>
    <formula>IF( Discount__c = 0,  AnnualRevenue , IF( Discount__c != 0, (AnnualRevenue / 100)* Discount__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>